<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/queue"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_queue_24"
        android:title="@string/queue" />


    <item
        android:id="@+id/trips"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_directions_boat_24"
        android:title="@string/trips" />
    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/account" />
</menu>